# pc-ezremote-client

./: .gitignore  CMakeLists.txt  README.md
data/applications/: ezremote-client.desktop
data/ezremote-client/assets/: index.html
data/ezremote-client/assets/langs/: English.ini  Portuguese_BR.ini
data/ezremote-client/assets/res/: angular-filemanager.min.js
source/: actions.cpp  actions.h  common.h  config.cpp  config.h  fs.cpp  fs.h  gui.cpp  ime_dialog.cpp  ime_dialog.h  inifile.c  inifile.h  lang.cpp  lang.h  main.cpp  textures.cpp  textures.h  util.h  windows.cpp  windows.h  zip_util.cpp  zip_util.h
source/clients/: apache.cpp  archiveorg.cpp  baseclient.cpp  baseclient.h  ftpclient.cpp  ftpclient.h  iis.cpp  myrient.cpp  nfsclient.cpp  nginx.cpp  npxserve.cpp  rclone.cpp  remote_client.h  sftpclient.cpp  smbclient.cpp  webdav.cpp
source/filehost/: filehost.cpp
source/http/: httplib.cpp  httplib.h
source/imgui/: imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
source/server/: http_server.cpp
